# CarPoint

./: .gitignore  requirements.txt
web/: pyproject.toml  requirements.txt
web/core/: admin.py  converts.py  models.py  urls.py  views.py
web/core/migrations/: 0001_initial.py  0002_alter_botuser_username.py  0003_alter_botuser_city_alter_botuser_phone.py  0004_botuser_name.py  0005_alter_model_options_remove_engine_title_engine_power_and_more.py  0006_alter_set_options_alter_model_price.py  0007_alter_set_image_alter_set_model_settransmission_and_more.py  0008_rename_city_id_car_city_rename_engine_id_car_engine_and_more.py  0009_alter_car_set.py  0010_color_setcolor.py  0011_alter_city_options_alter_mark_options_entry.py  0012_newcar_question_alter_entry_address_alter_entry_car_and_more.py  0013_webuser_alter_car_set_alter_color_title_and_more.py  0014_alter_webuser_options_alter_webuser_ip_address_and_more.py  0015_userquestion.py  0016_alter_newcar_image.py  0017_alter_entry_user.py  0018_alter_car_city_alter_car_expenditure.py  0019_distributor.py  0020_delete_distributor.py  0021_distributor.py  0022_settypecar.py  0023_settypecar_user.py  0024_alter_setcolor_car.py  0025_alter_settypecar_car.py  0026_files.py  0027_files_created.py  0028_adminentryfiles_distributorentryfiles_file_setentry_and_more.py  0029_adminentryfiles_act_adminentryfiles_agreement_and_more.py  0030_adminentryfiles_entry_distributorentryfiles_entry.py  0036_alter_setentry_status.py  (+9 more)
web/parser/: urls.py  views.py
web/templates/: index.html  oferta.html
web/web/: settings.py  urls.py
(+84 files in other folders)
