[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiomysql = "0.1.1"
aiosignal = "1.2.0"
asgiref = "3.5.2"
async-generator = "1.10"
async-timeout = "4.0.2"
attrs = "21.4.0"
autopep8 = "1.6.0"
babel = "2.9.1"
bandit = "1.7.4"
beautifulsoup4 = "4.11.1"
bs4 = "0.0.1"
certifi = "2022.6.15"
charset-normalizer = "2.1.0"
colorama = "0.4.5"
databases = "0.6.0"
django = "4.1"
djangorestframework = "3.13.1"
fake-useragent = "0.1.11"
gitdb = "4.0.9"
gitpython = "3.1.27"
gunicorn = "20.1.0"
h11 = "0.13.0"
idna = "3.3"
loguru = "0.6.0"
multidict = "6.0.2"
mysql-connector-python = "8.0.29"
orm = "0.3.1"
outcome = "1.2.0"
pbr = "5.10.0"
protobuf = "4.21.2"
pycodestyle = "2.8.0"
pycparser = "2.21"
pymysql = "1.0.2"
pysocks = "1.7.1"
python-dotenv = "0.20.0"
pytz = "2022.1"
requests = "2.28.1"
selenium = "4.4.3"
smmap = "5.0.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
soupsieve = "2.3.2.post1"
sqlalchemy = "1.4.39"
sqlparse = "0.4.2"
stevedore = "4.0.0"
toml = "0.10.2"
tqdm = "4.64.1"
trio = "0.21.0"
trio-websocket = "0.9.2"
typesystem = "0.3.1"
tzdata = "2022.1"
urllib3 = "1.26.10"
webdriver-manager = "3.8.3"
win32-setctime = "1.1.0"
wsproto = "1.2.0"
mysqlclient = "^2.2.4"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
